clusters/common/apps/kieretsu/dns/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole-web
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: kieretsu
  hostnames:
    - "pihole.${LOCATION}.${COMMON_DOMAIN}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: pihole-primary-web
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
